# cynoMathNew

./: .gitignore  LICENSE  README.md  build.sh  cynoMathTools.sln
cynoMathTool/: BlackScholes.c  BlackScholes.h  BlackScholesBarrierOption.c  BlackScholesDoubleBarrier.h  BlackScholesSingleBarrier.h  BlackSholesDoubleBarrier.c  CMakeLists.txt  Integration_fin.c  MTRandomNumber.c  MTRandomNumber.h  Source.def  cynoMathTool.vcxproj  cynoMathTool.vcxproj.filters  cynoMathUtility.c  equityPath.c  equityPath.h  framework.h  integration_GH.c  integration_GL.c  matrix.c  matrix.h  optimizer.c  optimizer.h  packages.config  randomNumber.c  rootFinder.c  sobol.c  sorting.c  specialFunctions.c  specialFunctions.h
cynoMathToolTest/: Imports.cs  TestMathTool.cs  cynoMathToolTest.csproj
examples/: README.md
examples/csharp/: CynoMathExample.csproj  Program.cs
examples/java/: CynoMathExample.java  CynoMathJNI.c
examples/vba/: CynoMathExample.bas
